[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/backgrounds/StageBG.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/dungeon/BattleNavBar.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/dungeon/stage_1/Stage1.gd" type="Script" id=4]
[ext_resource path="res://scenes/dungeon/enemy/Golem.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/dungeon/HealthBar.tscn" type="PackedScene" id=6]

[node name="Stage1" type="Control"]
margin_right = 1280.0
margin_bottom = 720.0
script = ExtResource( 4 )

[node name="StageBG" parent="." instance=ExtResource( 1 )]

[node name="BattleNavBar" parent="." instance=ExtResource( 2 )]

[node name="Player" type="Node2D" parent="."]

[node name="HealthBar" parent="Player" instance=ExtResource( 6 )]
margin_left = 810.0
margin_top = 620.0
margin_right = 970.0
margin_bottom = 640.0

[node name="Enemy" type="Node2D" parent="."]

[node name="Golem" parent="Enemy" instance=ExtResource( 5 )]
position = Vector2( 150, 280 )

[node name="HealthBar" parent="Enemy" instance=ExtResource( 6 )]
margin_left = 295.0
margin_top = 620.0
margin_right = 455.0
margin_bottom = 640.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 1000.0
margin_top = 450.0
margin_right = 1120.0
margin_bottom = 582.0
rect_min_size = Vector2( 120, 0 )

[node name="Attack" type="Button" parent="VBoxContainer"]
margin_right = 120.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )
text = "Attack"

[connection signal="tree_exited" from="." to="." method="_on_Stage1_tree_exited"]
[connection signal="tree_exiting" from="." to="." method="_on_Stage1_tree_exiting"]
[connection signal="pressed" from="VBoxContainer/Attack" to="." method="_on_Attack_pressed"]
